# ghcord

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.ko.md  README.md  codecov.yml  config.example.toml  docker-compose.yml  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: check-lock-and-lint.yml  test.yml
app/: config.py  db.py  ledger.py  main.py  reminders.py  subscriptions.py
app/clients/: discord_api.py  embeds.py  github_app.py
app/identity/: mentions.py  oauth.py  user_links.py  verify_install.py
app/interactions/: actions.py  preview.py  router.py
app/webhook/: formatters.py  router.py  security.py
docs/: 01-github-app.md  02-discord-app.md  03-run-the-server.md  04-expose-https.md  05-commands-and-signin.md  06-verify-and-troubleshoot.md  README.md
docs/ko/: 01-github-app.md  02-discord-app.md  03-run-the-server.md  04-expose-https.md  05-commands-and-signin.md  06-verify-and-troubleshoot.md  README.md
scripts/: register_commands.py
tests/: conftest.py  test_actions.py  test_config.py  test_db.py  test_discord_api.py  test_formatters.py  test_github_app.py  test_interactions.py  test_ledger.py  test_mentions.py  test_preview.py  test_relay.py  test_reminders.py  test_status.py  test_subscriptions.py  test_user_links.py  test_webhook.py
